# furax

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  pyproject.toml  zensical.toml
.claude/skills/furax-operator-designer/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  ci.yml  draft-pdf.yml  pre-commit.yml  release.yml
astrosim/: detectors.py  landscapes.py  samplings.py
astrosim/instruments/: sat.py
astrosim/operators/: bolometers.py  hwp.py  projections.py
binh_test/: prepare_config.yaml  run_prepare.py  run_prepare.slurm
docs/: index.md  requirements.txt
docs/api/: core.md  data_structures.md  distributed.md  exceptions.md  furax.md  interfaces.md  io.md  linalg.md  mapmaking.md  math.md  obs.md  operators.md  tree.md
docs/api/core/: algebra.md  composite.md  special.md  structural.md
docs/api/mapmaking/: config.md  mapmaker.md  observation.md  preconditioner.md
docs/api/obs/: atmosphere.md  beam.md  landscapes.md  likelihoods.md  pointing.md  polarization.md  seds.md  stokes.md
docs/design/: single-array-stokes.md
docs/development/: changelog.md  contributing.md
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/api/: data_structures.rst  index.rst  operators.rst
docs/source/development/: changelog.md  contributing.md  index.rst
docs/source/examples/: component_separation.md  furax-developer-tutorial_260423.html  furax-developer-tutorial_260423.ipynb  index.rst  mapmaking-introduction.ipynb  mapmaking-tutorial.ipynb  mapmaking.md
docs/source/user_guide/: data_structures.md  getting_started.md  index.rst  operators.md
docs/user_guide/: operators.md
examples/comp_sep/: 00_fgbuster_vs_furax.ipynb  01_Basic_comp_sep.ipynb  01_PPL_comp_sep.ipynb  02_Clustering.ipynb  02_gridding_comp_sep.ipynb  03_Clustering.ipynb  bench.py  generate_maps.py  testing_cluster.ipynb
examples/comp_sep/notebooks/: 01_Basic.ipynb  02_Clustering.ipynb  03_Old_SED_API.ipynb
paper/: CONTRIBUTING.md  make.sh  paper.bib  paper.md
paper-joss/: make.sh  paper.bib  paper.crossref  paper.md
src/astrosim/: landscapes.py
src/astrosim/_base/: config.py  core.py  dense.py  linear.py  rules.py
src/astrosim/instruments/: sat.py
src/astrosim/operators/: __init__.py  base.py  hwp.py  polarizers.py  projections.py  qu_rotations.py  toeplitz.py
src/astrosim/toast/: obs_matrix.py
src/furax/: __init__.py  _config.py  components.py  detectors.py  distributed.py  exceptions.py  landscapes.py  projections.py  tree.py  tree_block.py
src/furax/_base/: axes.py  blocks.py  config.py  core.py  dense.py  indices.py  linear.py  rules.py  utils.py
src/furax/_instruments/: sat.py  sky.py
src/furax/comp_sep/: __init__.py  _gridding.py  _likelihoods.py  _optimizers.py
src/furax/core/: __init__.py  _axes.py  _base.py  _blocks.py  _dense.py  _diagonal.py  _fourier.py  _indices.py  _linear.py  _mask.py  _ranges.py  _sum.py  _toeplitz.py  _trees.py  rules.py  utils.py
src/furax/instruments/: sat.py
src/furax/interfaces/: lineax.py  observation.py
src/furax/io/: readers.py
src/furax/linalg/: __init__.py  _cg.py  _eigvalsh.py  _lanczos.py  _lobpcg.py  _nystrom.py  _utils.py  cholesky.py  low_rank.py
src/furax/mapmaking/: __init__.py  _block.py  _deprojection.py  _geometry.py  _logger.py  _marginalize.py  _model.py  _observation.py  _observation_data.py  _reader.py  _scan_blocks.py  acquisition.py  atmosphere.py  basis_templates.py  config.py  gap_filling.py  gram.py  mapmaker.py  noise.py  pixell_utils.py  pointing.py  preconditioner.py  results.py  spline_hwpss_template.py  streaming.py  templates.py  utils.py  weight.py
src/furax/math/: __init__.py  bspline.py  coords.py  lbfgs.py  quaternion.py  sht.py
src/furax/obs/: __init__.py  _detectors.py  _likelihoods.py  _projections.py  landscapes.py  pointing.py  stokes.py
src/furax/operators/: __init__.py  hwp.py  (+7 more)
src/so_mapmaking/: _preproc.py  prepare.py  run.py  stage.py  util.py
test_files/: binary_mask.fits  hwp_VES.py  hwp_component_separation_test.ipynb  likelihoods_kwitchi.py
test_files/NFREQ100_NSIDE64_RCC/: Cl_PP_input.npy  Cl_eff.npy  Cl_id.npy  Cl_nonid.npy  Cl_uncorr.npy  Cl_ves.npy
tests/: conftest.py  helpers.py  test_compsep.py  test_landscapes.py  test_projections.py  test_pytrees.py  test_solver.py  test_tree.py  test_tree_block.py
tests/_base/: conftest.py  test_add.py  test_axes.py  test_base.py  test_blocks.py  test_core.py  test_dense.py  test_indices.py  test_inverse.py  test_mul.py  test_pack.py  test_rules.py
tests/core/: conftest.py  test_blocks.py  test_dense.py  test_diagonal.py  test_fourier.py  test_indices.py  test_mask.py  test_pack.py  test_rules.py  test_toeplitz.py  test_trees.py
tests/interfaces/: test_lineax.py
tests/io/: test_readers.py
tests/linalg/: test_cg.py  test_cholesky.py  test_eigvalsh.py  test_lanczos.py  test_lobpcg.py  test_low_rank.py  test_nystrom.py
tests/mapmaking/: helpers.py  test_acquisition.py  test_atmosphere.py  test_basis_templates.py  test_config.py  test_demod_pointing.py  test_deprojection.py  test_double_precision.py  test_gap_filling.py  test_geometry.py  test_gram.py  test_joint_templates.py  test_mapmaker.py  test_marginalize.py  test_model.py  test_noise.py  test_pointing.py  test_preconditioner.py  test_results.py  test_scan_blocks.py  test_spline_hwpss_template.py  test_streaming.py  test_template_operator.py  test_templates.py  test_weight.py
tests/math/: test_bspline.py  test_coords.py  test_lbfgs.py  test_quaternion.py  test_sht.py
tests/obs/: conftest.py  test_landscapes.py  test_likelihood.py  test_pointing.py  test_projections.py  test_stokes.py  test_tangential_landscape.py
tests/operators/: test_base.py  test_bolometers.py  test_decorators.py  test_hwp.py  test_polarizers.py  test_projections.py  test_qu_rotations.py  test_toeplitz.py
tests/preprocessing/: test_gap_filling.py
tests/seds/: test_seds.py
tests/so_mapmaking/: test_preproc.py
tests/toast/: test_obs_matrix.py
(+142 files in other folders)
