[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools==69.2.0', 'setuptools_scm[toml]>=6.2', 'wheel']

[project]
name = 'furax'
authors = [
    { name = 'Pierre Chanial', email = 'chanial@apc.in2p3.fr' },
    { name = 'Simon Biquard', email = 'biquard@apc.in2p3.fr' },
    { name = 'Wassim Kabalan' },
    { name = 'Wuhyun Sohn', email = 'sohn@apc.in2p3.fr' },
]
maintainers = [{ name = 'Pierre Chanial', email = 'chanial@apc.in2p3.fr' }]
description = 'Operators and solvers for high-performance computing.'
readme = 'README.md'
keywords = ['scientific computing']
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering',
]
requires-python = '>=3.10'
license = { file = 'LICENSE' }
dependencies = [
    'astropy',
    'equinox',
    'healpy>=0.18.1',
    'jax>=0.4.38,!=0.7.*',
    'jaxtyping',
    'jax-healpy>=0.5',
    'lineax>=0.0.8',
    'numpy',
    'scipy',
    'typing-extensions; python_version < "3.13"',
]
dynamic = ['version']

[project.optional-dependencies]
dev = ['ipython', 'pytest', 'pytest-cov', 'pytest-mock', 'pytest-insubprocess>=1.1', 'setuptools_scm', 'beartype']
comp_sep = ['pysm3']
docs = [
    'sphinx>=5.0',
    'sphinx-book-theme>=1.0',
    'sphinx-copybutton>=0.5',
    'myst-parser>=1.0',
    'nbsphinx>=0.8',
    'ipykernel>=6.0',
]
mapmaking = [
    'apischema>=0.19.0',
    'jax-grid-search',
    'matplotlib',
    'optax',
    'pixell>=0.31.7',
    'pyyaml>=0.6.2',
]
so = [
    'cyclopts>=4.6.0',
    'sotodlib[site-pipeline]>=0.6.16',
    'so3g>=0.2.5',
]
toast = [
    'toast>=3.0.0a42',
]
lbs = [
    'litebird_sim @ git+https://github.com/litebird/litebird_sim.git',
]
interfaces = ["furax[so,toast,lbs]"]

[project.urls]
homepage = 'https://scipol.in2p3.fr'
repository = 'https://github.com/CMBSciPol/furax'

[project.scripts]
furax-so-atomic-map = 'furax.interfaces.sotodlib.mapmaker:main_cli'
furax-so-multi-map = 'furax.interfaces.sotodlib.multi_observation.__main__:app'

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'except ImportError:',
    'raise NotImplementedError',
    'if typing.TYPE_CHECKING:',
]
show_missing = true
skip_covered = true

[[tool.mypy.overrides]]
module = [
    'apischema',
    'astropy.*',
    'cyclopts',
    'healpy',
    'jax_grid_search',
    'jax_healpy',
    'lineax',
    'matplotlib.*',
    'mpl_toolkits.*',
    'litebird_sim',
    'optax',
    'pixell.*',
    'pysm3.*',
    'scipy.*',
    'so3g.*',
    'sotodlib.*',
    'toast.*',
]
ignore_missing_imports = true

[tool.pytest.ini_options]
# addopts = '-ra --cov=furax --jaxtyping-packages=furax,beartype.beartype(conf=beartype.BeartypeConf(strategy=beartype.BeartypeStrategy.On))'
addopts = '-s -ra --color=yes -m "not slow"'
testpaths = ['tests']
markers = ["slow: mark test as slow."]

#[tool.setuptools]
#packages = ['src/furax']

[tool.setuptools_scm]
version_scheme = 'post-release'
fallback_version = '0.0.0'

[tool.ruff]
line-length = 100
fix = true           # autofix issues
force-exclude = true # useful with ruff-pre-commit plugin
src = ["src"]

[tool.ruff.lint]
extend-select = [
    'ARG001', # flake8-unused-function-arguments
    'I',      # isort
    'UP',     # pyupgrade
    'T10',    # flake8-debugger
]
ignore = [
    'E731', # lambda assignment
    'E741', # ambiguous variable name
    'F722', # forward annotation syntax error; conflicts with jaxtyping Array annotations
]

[tool.ruff.format]
quote-style = 'single'
