[build-system]
build-backend = 'hatchling.build'
requires = ['hatchling', 'hatch-vcs']

[project]
name = 'furax'
authors = [
    { name = 'Pierre Chanial', email = 'chanial@apc.in2p3.fr' },
    { name = 'Simon Biquard', email = 'biquard@apc.in2p3.fr' },
    { name = 'Wassim Kabalan' },
    { name = 'Wuhyun Sohn', email = 'sohn@apc.in2p3.fr' },
]
maintainers = [{ name = 'Pierre Chanial', email = 'chanial@apc.in2p3.fr' }]
description = 'Operators and solvers for high-performance computing.'
readme = 'README.md'
keywords = ['scientific computing']
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering',
]
requires-python = '>=3.11'
license = 'MIT'
license-files = ['LICENSE']
dependencies = [
    'astropy>=7.2',
    'equinox>=0.13.8',
    'healpy>=1.19.0',
    'jax>=0.10.0',
    'jaxtyping>=0.3.9',
    "jax-healpy[recommended]>=0.5",
    'lineax>=0.1.1',
    'numpy>=2.0',
    'scipy>=1.14',
    'typing-extensions; python_version < "3.13"',
    "wadler-lindig>=0.1.7",
]
dynamic = ['version']

[project.optional-dependencies]
comp_sep = ['pysm3']
mapmaking = [
    'apischema>=0.19.0',
    'jax-cadre>=0.1.2',
    'matplotlib>=3.8.4',
    'pixell>=0.31.3',
    'pyyaml>=6.0.3',
]
so = [
    'cyclopts>=4.6.0',
    'sotodlib[site-pipeline]>=0.6.19',
    'so3g>=0.2.7; python_version >= "3.13"',  # official Python 3.13 support since v0.2.5
    'so3g>=0.2.4; python_version < "3.13"',  # keep v0.2.4; it has wheels for macOS 13+
]
toast = [
    'toast>=3.0.3',
]
lbs = [
    'litebird_sim>=0.16.1',
]
sht = [
    'jax-healpy[recommended]>=0.5',
    's2fft',  # TODO: remove; needed for now since uv sources overrides don't apply to transitive deps
]
interfaces = ["furax[so,toast,lbs]"]

[project.urls]
homepage = 'https://scipol.in2p3.fr'
repository = 'https://github.com/CMBSciPol/furax'

[project.scripts]
furax-so-atomic-map = 'furax.interfaces.sotodlib.mapmaker:main_cli'
furax-so-prepare = 'so_mapmaking.prepare:app'
furax-so-map = 'so_mapmaking.run:app'
furax-so-stage = 'so_mapmaking.stage:app'

[dependency-groups]
dev = [
    {include-group = 'docs'},
    'ipython',
    'pytest>=9.0',
    'pytest-cov',
    'pytest-mock',
    'pytest-insubprocess>=1.1',
    'beartype',
]
docs = [
    'sphinx>=5.0',
    'sphinx-book-theme>=1.0',
    'sphinx-copybutton>=0.5',
    'myst-parser>=1.0',
    'nbsphinx>=0.8',
    'ipykernel>=6.0',
]
cuda = ['jax[cuda13]>=0.10.0']

[tool.coverage.report]
exclude_also = [
    'pragma: no cover',
    'except ImportError:',
    'raise NotImplementedError',
    'if typing.TYPE_CHECKING:',
]
show_missing = true
skip_covered = true

[tool.hatch.version]
source = 'vcs'

[[tool.mypy.overrides]]
module = [
    'astropy.*',
    'cadre',
    'cyclopts',
    'healpy',
    'jax_healpy',
    'lineax',
    'matplotlib.*',
    'mpl_toolkits.*',
    'litebird_sim',
    'pixell.*',
    'pysm3.*',
    'scipy.*',
    'so3g.*',
    'sotodlib.*',
    'toast.*',
]
ignore_missing_imports = true

[tool.pytest]
# addopts includes jaxtyping option for type-checking tests:
# '--jaxtyping-packages=furax,beartype.beartype(conf=beartype.BeartypeConf(strategy=beartype.BeartypeStrategy.On))'
addopts = [
    '-s',
    '-ra',
    '--color=yes',
    '--strict-config',
    '--strict-markers',
    '-m', 'not slow',
]
minversion = "9"
testpaths = ['tests']
markers = [
    "slow: mark test as slow.",
    "distributed: multi-device test; run in its own session via `pytest -m distributed`.",
]
log_level = "INFO"
xfail_strict = true

[tool.uv.sources]
litebird-sim = { git = "https://github.com/litebird/litebird_sim" }  # TODO: remove when 0.17.0 is released
s2fft = { git = "https://github.com/astro-informatics/s2fft" }  # TODO: remove when next release is out
jax-healpy = { git = "https://github.com/CMBSciPol/jax-healpy" }

[tool.ruff]
line-length = 100
fix = true           # autofix issues
force-exclude = true # useful with ruff-pre-commit plugin

[tool.ruff.lint]
extend-select = [
    'ARG001', # flake8-unused-function-arguments
    'B',      # flake8-bugbear
    'I',      # isort
    'UP',     # pyupgrade
    'T10',    # flake8-debugger
]
ignore = [
    'E731', # lambda assignment
    'E741', # ambiguous variable name
    'F722', # forward annotation syntax error; conflicts with jaxtyping Array annotations
    'B905', # zip() without `strict=` parameter
]

[tool.ruff.format]
quote-style = 'single'
